; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_file.c_test_fdopen.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_file.c_test_fdopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_fdopen.buffer = internal constant [10 x i8] c"\00\01\02\03\04\05\06\07\08\09", align 1
@.str = private unnamed_addr constant [11 x i8] c"fdopen.tst\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_BINARY = common dso_local global i32 0, align 4
@_S_IREAD = common dso_local global i32 0, align 4
@_S_IWRITE = common dso_local global i32 0, align 4
@O_RDONLY = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"read wrong byte count\0A\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"read wrong bytes\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_fdopen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_fdopen() #0 {
  %1 = alloca [10 x i8], align 1
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @O_WRONLY, align 4
  %5 = load i32, i32* @O_CREAT, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @O_BINARY, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @_S_IREAD, align 4
  %10 = load i32, i32* @_S_IWRITE, align 4
  %11 = or i32 %9, %10
  %12 = call i32 (i8*, i32, ...) @open(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %11)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @write(i32 %13, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @test_fdopen.buffer, i64 0, i64 0), i32 10)
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @close(i32 %15)
  %17 = load i32, i32* @O_RDONLY, align 4
  %18 = load i32, i32* @O_BINARY, align 4
  %19 = or i32 %17, %18
  %20 = call i32 (i8*, i32, ...) @open(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %19)
  store i32 %20, i32* %2, align 4
  %21 = load i32, i32* %2, align 4
  %22 = load i32, i32* @SEEK_SET, align 4
  %23 = call i32 @lseek(i32 %21, i32 5, i32 %22)
  %24 = load i32, i32* %2, align 4
  %25 = call i32* @fdopen(i32 %24, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %25, i32** %3, align 8
  %26 = getelementptr inbounds [10 x i8], [10 x i8]* %1, i64 0, i64 0
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @fread(i8* %26, i32 1, i32 10, i32* %27)
  %29 = icmp eq i32 %28, 5
  %30 = zext i1 %29 to i32
  %31 = call i32 @ok(i32 %30, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  %32 = getelementptr inbounds [10 x i8], [10 x i8]* %1, i64 0, i64 0
  %33 = call i64 @memcmp(i8* %32, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @test_fdopen.buffer, i64 0, i64 5), i32 5)
  %34 = icmp eq i64 %33, 0
  %35 = zext i1 %34 to i32
  %36 = call i32 @ok(i32 %35, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0))
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @fclose(i32* %37)
  %39 = call i32 @unlink(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @open(i8*, i32, ...) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32* @fdopen(i32, i8*) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @fread(i8*, i32, i32, i32*) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
